# desolation

./: README.md  pyproject.toml
desolation/: __init__.py  context.py  evaluate.py
tests/: arithmetic.py  test_context.py  test_evaluate.py
