[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "desolation"
authors = [{name = "Eugene Van den Bulke", email = "eugene.vandenbulke@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "sexpdata",
]
license = {file = "LICENSE"}

[project.urls]
Home = "http://github.com/3kwa/desolation"
